seaqt/QtWidgets/gen_qdatetimeedit.h

class QCalendar;
class QCalendarWidget;
class QDate;
class QDateTime;
class QDateTimeEdit;
class QEvent;
class QMetaObject;
class QSize;
class QTime;
typedef struct QCalendar QCalendar;
typedef struct QCalendarWidget QCalendarWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSize QSize;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QWidget QWidget;
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
typedef struct VirtualQDateEdit VirtualQDateEdit;
typedef struct QDateEdit_VTable{
	void (*destructor)(VirtualQDateEdit* self);
	QMetaObject* (*metaObject)(const VirtualQDateEdit* self);
	void* (*metacast)(VirtualQDateEdit* self, const char* param1);
	int (*metacall)(VirtualQDateEdit* self, int param1, int param2, void** param3);
	QSize* (*sizeHint)(const VirtualQDateEdit* self);
	void (*clear)(VirtualQDateEdit* self);
	void (*stepBy)(VirtualQDateEdit* self, int steps);
	bool (*event)(VirtualQDateEdit* self, QEvent* event);
	void (*keyPressEvent)(VirtualQDateEdit* self, QKeyEvent* event);
	void (*wheelEvent)(VirtualQDateEdit* self, QWheelEvent* event);
	void (*focusInEvent)(VirtualQDateEdit* self, QFocusEvent* event);
	bool (*focusNextPrevChild)(VirtualQDateEdit* self, bool next);
	int (*validate)(const VirtualQDateEdit* self, struct miqt_string input, int* pos);
	void (*fixup)(const VirtualQDateEdit* self, struct miqt_string input);
	QDateTime* (*dateTimeFromText)(const VirtualQDateEdit* self, struct miqt_string text);
	struct miqt_string (*textFromDateTime)(const VirtualQDateEdit* self, QDateTime* dt);
	int (*stepEnabled)(const VirtualQDateEdit* self);
	void (*mousePressEvent)(VirtualQDateEdit* self, QMouseEvent* event);
	void (*paintEvent)(VirtualQDateEdit* self, QPaintEvent* event);
	void (*initStyleOption)(const VirtualQDateEdit* self, QStyleOptionSpinBox* option);
	QSize* (*minimumSizeHint)(const VirtualQDateEdit* self);
	QVariant* (*inputMethodQuery)(const VirtualQDateEdit* self, int param1);
	void (*resizeEvent)(VirtualQDateEdit* self, QResizeEvent* event);
	void (*keyReleaseEvent)(VirtualQDateEdit* self, QKeyEvent* event);
	void (*focusOutEvent)(VirtualQDateEdit* self, QFocusEvent* event);
	void (*contextMenuEvent)(VirtualQDateEdit* self, QContextMenuEvent* event);
	void (*changeEvent)(VirtualQDateEdit* self, QEvent* event);
	void (*closeEvent)(VirtualQDateEdit* self, QCloseEvent* event);
	void (*hideEvent)(VirtualQDateEdit* self, QHideEvent* event);
	void (*mouseReleaseEvent)(VirtualQDateEdit* self, QMouseEvent* event);
	void (*mouseMoveEvent)(VirtualQDateEdit* self, QMouseEvent* event);
	void (*timerEvent)(VirtualQDateEdit* self, QTimerEvent* event);
	void (*showEvent)(VirtualQDateEdit* self, QShowEvent* event);
	int (*devType)(const VirtualQDateEdit* self);
	void (*setVisible)(VirtualQDateEdit* self, bool visible);
	int (*heightForWidth)(const VirtualQDateEdit* self, int param1);
	bool (*hasHeightForWidth)(const VirtualQDateEdit* self);
	QPaintEngine* (*paintEngine)(const VirtualQDateEdit* self);
	void (*mouseDoubleClickEvent)(VirtualQDateEdit* self, QMouseEvent* event);
	void (*enterEvent)(VirtualQDateEdit* self, QEnterEvent* event);
	void (*leaveEvent)(VirtualQDateEdit* self, QEvent* event);
	void (*moveEvent)(VirtualQDateEdit* self, QMoveEvent* event);
	void (*tabletEvent)(VirtualQDateEdit* self, QTabletEvent* event);
	void (*actionEvent)(VirtualQDateEdit* self, QActionEvent* event);
	void (*dragEnterEvent)(VirtualQDateEdit* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(VirtualQDateEdit* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(VirtualQDateEdit* self, QDragLeaveEvent* event);
	void (*dropEvent)(VirtualQDateEdit* self, QDropEvent* event);
	bool (*nativeEvent)(VirtualQDateEdit* self, struct miqt_string eventType, void* message, intptr_t* result);
	int (*metric)(const VirtualQDateEdit* self, int param1);
	void (*initPainter)(const VirtualQDateEdit* self, QPainter* painter);
	QPaintDevice* (*redirected)(const VirtualQDateEdit* self, QPoint* offset);
	QPainter* (*sharedPainter)(const VirtualQDateEdit* self);
	void (*inputMethodEvent)(VirtualQDateEdit* self, QInputMethodEvent* param1);
	bool (*eventFilter)(VirtualQDateEdit* self, QObject* watched, QEvent* event);
	void (*childEvent)(VirtualQDateEdit* self, QChildEvent* event);
	void (*customEvent)(VirtualQDateEdit* self, QEvent* event);
	void (*connectNotify)(VirtualQDateEdit* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQDateEdit* self, QMetaMethod* signal);
}QDateEdit_VTable;
VirtualQDateEdit* QDateEdit_new(const QDateEdit_VTable* vtbl, size_t vdata, QWidget* parent);
VirtualQDateEdit* QDateEdit_new2(const QDateEdit_VTable* vtbl, size_t vdata);
VirtualQDateEdit* QDateEdit_new3(const QDateEdit_VTable* vtbl, size_t vdata, QDate* date);
VirtualQDateEdit* QDateEdit_new4(const QDateEdit_VTable* vtbl, size_t vdata, QDate* date, QWidget* parent);
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
void QDateEdit_virtualbase_inputMethodEvent(VirtualQDateEdit* self, QInputMethodEvent* param1);
bool QDateEdit_virtualbase_eventFilter(VirtualQDateEdit* self, QObject* watched, QEvent* event);
void QDateEdit_virtualbase_childEvent(VirtualQDateEdit* self, QChildEvent* event);
void QDateEdit_virtualbase_customEvent(VirtualQDateEdit* self, QEvent* event);
void QDateEdit_virtualbase_connectNotify(VirtualQDateEdit* self, QMetaMethod* signal);
void QDateEdit_virtualbase_disconnectNotify(VirtualQDateEdit* self, QMetaMethod* signal);
QLineEdit* QDateEdit_protectedbase_lineEdit(const VirtualQDateEdit* self);
void QDateEdit_protectedbase_setLineEdit(VirtualQDateEdit* self, QLineEdit* edit);
void QDateEdit_protectedbase_updateMicroFocus(VirtualQDateEdit* self);
void QDateEdit_protectedbase_create(VirtualQDateEdit* self);
void QDateEdit_protectedbase_destroy(VirtualQDateEdit* self);
bool QDateEdit_protectedbase_focusNextChild(VirtualQDateEdit* self);
bool QDateEdit_protectedbase_focusPreviousChild(VirtualQDateEdit* self);
QObject* QDateEdit_protectedbase_sender(const VirtualQDateEdit* self);
int QDateEdit_protectedbase_senderSignalIndex(const VirtualQDateEdit* self);
int QDateEdit_protectedbase_receivers(const VirtualQDateEdit* self, const char* signal);
bool QDateEdit_protectedbase_isSignalConnected(const VirtualQDateEdit* self, QMetaMethod* signal);
const QMetaObject* QDateEdit_staticMetaObject();